// TODO(dan): this is not specific to activity and should go in a general CHASM location
syntax = "proto3";

package temporal.server.chasm.lib.activity.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/activity/gen/activitypb;activitypb";

import "temporal/server/api/persistence/v1/hsm.proto";

// ComponentStateToken is a token identifying a component versioned transition. It is intended as a
// token that component long-poll API callers can submit in order to communicate their last-seen
// state.
message ComponentStateToken {
  // Token schema version
  int32 version = 1;
  // Component versioned transition
  temporal.server.api.persistence.v1.VersionedTransition versioned_transition = 2;
}